assets/styles/base.scss
:root {
  --lt-colours-light: var(--light) !important;
  --lt-colours-lightgray: var(--lightgray) !important;
  --lt-colours-dark: var(--secondary) !important;
  --lt-colours-secondary: var(--tertiary) !important;
  --lt-colours-gray: var(--outlinegray) !important;
}

@import url('https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Playfair+Display:ital,wght@0,700;1,700&family=Spectral:ital,wght@0,300;0,700;1,300;1,700&display=swap');

body {
  font-family: 'Spectral', serif;
  font-size: 18px; // Feels good to me at 1200P on my 13" laptop
  line-height: 1.6;
  @media all and (min-width: 600px) {
    font-size: 20px; // Feels good to me at 1200P on my 13" laptop
  }
}

p {
  font-family: 'Spectral', serif;
}

h1 {
  font-family: 'Playfair Display', 'Spectral', serif;
  color: var(--dark);
}

h2, h3, h4, h5, h6, thead {
  font-family: 'Spectral', serif;
  font-variant-caps: normal;
  color: var(--dark);
  letter-spacing: 0; // Sometimes headings are inside <a>
  font-weight: 700;
  margin: revert;
  padding: revert;

  &:hover > .hanchor {
    opacity: 1;
  }
}

.hanchor {
  font-family: Inter;
  margin-left: -0.8em;
  opacity: 0.3;
  transition: opacity 0.3s ease;
  color: var(--secondary);

}

p, ul, text {
  color: var(--gray);
  fill: var(--gray);
  font-weight: revert;
  margin: revert;
  padding: revert;
}

.mainTOC {
  background: var(--lightgray);
  border-radius: 5px;
  padding: 0.75em 1em;
}

.mainTOC details summary {
  cursor: zoom-in;
  font-family: Inter;
  color: var(--dark);
  font-weight: 700;
}

.mainTOC details[open] summary {
    cursor: zoom-out;
}

#TableOfContents > ol {
  counter-reset: section;
  margin-left: 0em;
  padding-left: 1.5em;
  & > li {
    counter-increment: section;
    & > ol {
      counter-reset: subsection;
      & > li {
        counter-increment: subsection;
        &::marker {
          content: counter(section) "." counter(subsection) "  ";
        }
      }
    }
  }

  & > li::marker {
    content: counter(section) "  ";
  }

  & > li::marker, & > li > ol > li::marker {
    font-family: Source Sans Pro;
    font-weight: 700;
  }
}

table {
  width: 100%;
}

img {
  max-width: 100%;
  border-radius: 3px;
  margin: 1em 0;
}

p>img+em {
  display: block;
  transform: translateY(-1em);
}

sup {
  line-height: 0
}

p, tbody, li {
  color: var(--gray);
  line-height: 1.5em;
}

blockquote {
  margin-left: 0em;
  border-left: 3px solid var(--secondary);
  padding-left: 1em;
  transition: border-color 0.2s ease;

  &:hover {
    border-color: var(--tertiary);
  }
}

table {
  padding: 1.5em;
}

td, th {
  padding: 0.1em 0.5em;
}

.footnotes p {
  margin: 0.5em 0;
}

.pagination {
  list-style: none;
  padding-left: 0;
  display: flex;
  margin-top: 2em;
  gap: 1.5em;
  justify-content: center;

  .disabled {
    opacity: 0.2;
  }

  & > li {
    text-align: center;
    display: inline-block;

    & a {
      background-color: transparent !important;
    }

    & a[href$="#"] {
      opacity: 0.2;
    }
  }
}

.section {
  & h3 > a {
    font-weight: 700;
    font-family: "Spectral";
    letter-spacing: 0;
    margin: 0;
  }
  & p {
    margin-top: 0;
  }
}

article {
  & > .meta {
    margin: -1.5em 0 1em 0;
    opacity: 0.7;
  }

  & a {
    font-family: "Alegreya SC", "Spectral";
    font-weight: 300;
    letter-spacing: 0.025em;

    &.internal-link {

      &.broken {
        opacity: 0.5;
        background-color: transparent;
      }
    }
    &.external-link::after {
      content: "\2B00"; // Diagonal arrow
      font-size: 0.75em;
      position: relative;
      bottom: 0.5em;
    }
  }

  & p {
    overflow-wrap: anywhere;
  }
}

.tags {
  list-style: none;
  padding-left: 0;

  & .meta {
    & > h1 {
      margin: 0;
    }
    & > p {
      margin: 0;
    }
  }

  & > li {
    display: inline-block;
    margin: 0.4em 0;
  }

  & > li > a {
    border-radius: 8px;
    border: var(--outlinegray) 1px solid;
    padding: 0.2em 0.5em;
    &::before {
      content: "#";
      margin-right: 0.3em;
      color: var(--outlinegray);
    }
  }
}

.backlinks a {
  font-size: 0.9rem;
}

sup > a {
  text-decoration: none;
  padding: 0 0.1em 0 0.2em;
}

a {
  font-family: "Spectral SC", "Spectral", serif;
  font-size: 1em;
  font-weight: 300;
  text-decoration: none;
  transition: all 0.2s ease;
  color: var(--secondary);

  &:hover {
    color: var(--tertiary) !important;
  }
}

pre {
  font-family: 'Hack', monospace;
  padding: 0.75em;
  border-radius: 3px;
  overflow-x: scroll;
}

code {
  font-family: 'Hack', monospace;
  font-size: 0.85em;
  padding: 0.15em 0.3em;
  border-radius: 5px;
  background: var(--lightgray);
}

html {
  scroll-behavior: smooth;

  &:lang(ar) {
    & p, & h1, & h2, & h3, article {
      direction: rtl;
      text-align: right;
    }
  }
}

body {
  margin: 0;
  height: 100vh;
  width: 100vw;
  //overflow-x: hidden;
  max-width: 100%;
  box-sizing: border-box;
  background-color: var(--light);
}

@keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

footer {
  margin-top: 4em;
  text-align: center;
  & ul {
    padding-left: 0;
  }
}

hr {
  width: 25%;
  margin: 4em auto;
  height: 2px;
  border-radius: 1px;
  border-width: 0;
  color: var(--dark);
  background-color: var(--dark);
}

.singlePage {
  padding: 2rem 5vw;

  max-width: 50rem;
  margin: 0 auto;
}

.page-end {
  display: flex;
  flex-direction: row;
  gap: 2em;

  @media all and (max-width: 780px) {
    flex-direction: column;
  }

  & > * {
    flex: 1 0 0;
  }

  & > .backlinks-container {
    & > ul {
      list-style: none;
      padding-left: 0;

      & > li {
        margin: 0.5em 0;
        padding: 0.25em 1em;
        border: var(--outlinegray) 1px solid;
        border-radius: 5px
      }
    }
  }

  & #graph-container {
    border: var(--outlinegray) 1px solid;
    border-radius: 5px;
    box-sizing: border-box;
    min-height: 250px;

    & > svg {
      margin-bottom: -5px;

    }
  }
}

.centered {
  margin-top: 30vh;
}

article > h1 {
  font-size: 2em;
}

header {
  display: flex;
  flex-direction: row;
  align-items: center;

  & > h1 {
    font-size: 2em;
  }

  & > nav {
    @media all and (max-width: 600px) {
      display: none;
    }
  }

  & > .spacer {
    flex: 1 1 auto;
  }

  & > svg {
    cursor: pointer;
    width: 18px;
    min-width: 18px;
    margin: 0 1em;

    &:hover .search-path {
      stroke: var(--tertiary);
    }

    .search-path {
      stroke: var(--gray);
      stroke-width: 2px;
      transition: stroke 0.5s ease;
    }
  }
}

#search-container {
  position: fixed;
  z-index: 9999;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100%;
  overflow: scroll;
  display: none;
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);

  & > div {
    width: 50%;
    margin-top: 15vh;
    margin-left: auto;
    margin-right: auto;

    @media all and (max-width: 1200px) {
      width: 90%;
    }

    & > * {
      width: 100%;
      border-radius: 4px;
      background: var(--light);
      box-shadow: 0 14px 50px rgba(27, 33, 48, 0.12), 0 10px 30px rgba(27, 33, 48, 0.16);
      margin-bottom: 2em;
    }

    & > input {
      box-sizing: border-box;
      padding: 0.5em 1em;
      font-family: Inter, sans-serif;
      color: var(--dark);
      font-size: 1.1em;
      border: 1px solid var(--outlinegray);

      &:focus {
        outline: none;
      }
    }

    & > #results-container {
      & .result-card {
        padding: 1em;
        cursor: pointer;
        transition: background 0.2s ease;
        border: 1px solid var(--outlinegray);
        border-bottom: none;
        width: 100%;

        // normalize button props
        font-family: inherit;
        font-size: 100%;
        line-height: 1.15;
        margin: 0;
        overflow: visible;
        text-transform: none;
        text-align: left;
        background: var(--light);
        outline: none;

        &:hover, &:focus {
          background: rgba(180, 180, 180, 0.15);
        }

        &:first-of-type {
          border-top-left-radius: 5px;
          border-top-right-radius: 5px;
        }

        &:last-of-type {
          border-bottom-left-radius: 5px;
          border-bottom-right-radius: 5px;
          border-bottom: 1px solid var(--outlinegray);
        }

        & > h3, & > p {
          margin: 0;
        }
      }
    }
  }
}

.search-highlight {
  background-color: #afbfc966;
  padding: 0.05em 0.2em;
  border-radius: 3px;
}

.section-ul {
  list-style: none;
  padding-left: 0;

  & > li {
    border: 1px solid var(--outlinegray);
    border-radius: 5px;
    padding: 0 1em;
    margin-bottom: 1em;

    & h3 {
      opacity: 1;
      font-weight: 700;
      margin-bottom: 0em;
    }

    & .meta {
      opacity: 0.6;
    }
  }
}

@keyframes dropin {
  0% {
    display: none;
    opacity: 0;
    visibility: hidden;
  }
  1% {
    display: inline-block;
    opacity: 0;
    transform: translate(-50%, 40%);
  }
  100% {
    opacity: 1;
    visibility: visible;
    transform: translate(-50%, 20%);
  }
}

.popover {
  z-index: 999;
  position: absolute;
  width: 20em;
  display: none;
  background-color: var(--light);
  padding: 1em;
  border: 1px solid var(--outlinegray);
  border-radius: 5px;
  transform: translate(-50%, 40%);
  pointer-events: none;
  transition: opacity 0.2s ease, transform 0.2s ease;
  user-select: none;
  overflow-wrap: anywhere;
  box-shadow: 6px 6px 36px 0px rgba(0,0,0,0.25);

  @media all and (max-width: 600px) {
    display: none !important;
  }

  &.visible {
    opacity: 1;
    visibility: visible;
    transform: translate(-50%, 20%);
    display: inline-block;
    animation: dropin 0.2s ease;
  }

  & > h3 {
    font-size: 1rem;
    margin: 0.25em 0;
  }

  & > .meta {
    margin-top: 0.25em;
    opacity: 0.5;
    font-family: "JetBrains Mono", monospace;
    font-size: 0.8rem;
  }

  & > p, & > a {
    margin: 0;
    font-weight: 400;
    user-select: none;
  }
}



#contact_buttons ul {
  list-style-type: none;

  li {
    display: inline-block;
  }

  li a {
    padding: 0 1em;
  }
}

